--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -228,6 +228,14 @@
     padding: var(--spacing-xs) var(--spacing-sm);
   }
 
+  // Content wrapper
+  .content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+  }
+
   // Justification
   &.justify-center {
     justify-content: center;
