--- a/src/components/atoms/VariantSelector/VariantSelector.module.scss
+++ b/src/components/atoms/VariantSelector/VariantSelector.module.scss
@@ -13,6 +13,7 @@
   max-width: 500px;
   height: 600px;
   box-sizing: border-box;
+  margin: 20px;
   justify-content: space-between;
 }
 
@@ -71,6 +72,7 @@
   justify-content: center;
   align-items: center;
   height: 300px;
+  width: 100%;
   flex: 1;
   min-height: 250px;
 }
