--- a/src/components/atoms/SimpleTopNav/SimpleTopNav.module.scss
+++ b/src/components/atoms/SimpleTopNav/SimpleTopNav.module.scss
@@ -1,6 +1,7 @@
 @import "../../../styles/_tokens.scss";
 
 .simpleTopNav {
+  z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -13,9 +14,8 @@
   width: 100%;
   max-width: 100vw;
   box-sizing: border-box;
-  position: relative;
-  z-index: 1000;
-  overflow-x: visible;
+  position: sticky !important;
+  top: 0 !important;
 }
 .version-display {
   background-color: var(--color-surface-2);
@@ -134,7 +134,6 @@
     visibility: hidden !important;
     opacity: 0 !important;
     height: 0 !important;
-    overflow: hidden !important;
     margin: 0 !important;
     padding: 0 !important;
   }
@@ -160,7 +159,6 @@
   visibility: hidden !important;
   opacity: 0 !important;
   height: 0 !important;
-  overflow: hidden !important;
 }
 
 // Mobile controls layout optimization
