--- a/src/components/atoms/Calendar/CalendarParts/CalendarTitle.module.scss
+++ b/src/components/atoms/Calendar/CalendarParts/CalendarTitle.module.scss
@@ -63,7 +63,7 @@
 }
 
 .type-day {
-  color: var(--color-text-muted);
+  color: var(--color-text-secondary);
   background-color: transparent;
   padding: var(--spacing-xs);
   text-align: center;
