--- a/src/components/atoms/PasswordInput/PasswordStrengthMeter.module.scss
+++ b/src/components/atoms/PasswordInput/PasswordStrengthMeter.module.scss
@@ -66,13 +66,13 @@
   transition: color 0.2s ease;
 
   &.met {
-    .label {
+    .requirementLabel {
       color: var(--color-success);
     }
   }
 
   &.unmet {
-    .label {
+    .requirementLabel {
       color: var(--color-error);
     }
   }
@@ -82,7 +82,7 @@
   flex-shrink: 0;
 }
 
-.label {
+.requirementLabel {
   color: var(--color-text-primary);
   font-weight: var(--font-weight-normal);
 }
