--- a/src/components/atoms/SimpleTopNav/SimpleTopNav.module.scss
+++ b/src/components/atoms/SimpleTopNav/SimpleTopNav.module.scss
@@ -8,13 +8,12 @@
   padding: var(--spacing-md) var(--spacing-lg);
   background-color: var(--color-surface);
   border-bottom: var(--border-width-thin) solid var(--color-border-secondary);
-  height: 100%;
-  min-height: 60px;
+  min-height: 80px;
   font-family: var(--font-family);
   width: 100%;
   max-width: 100vw;
   box-sizing: border-box;
-  position: sticky !important;
+  position: fixed !important;
   top: 0 !important;
 }
 .version-display {
