--- a/src/components/atoms/BrandLogo/BrandLogo.module.scss
+++ b/src/components/atoms/BrandLogo/BrandLogo.module.scss
@@ -165,6 +165,14 @@
   // Custom styling for LabSync brand if needed
 }
 
+.brand-github {
+  // Custom styling for GitHub brand if needed
+}
+
+.brand-uber {
+  // Custom styling for Uber brand if needed
+}
+
 .brand-default {
   // Custom styling for default brand if needed
 }
