--- a/src/components/atoms/Alert/Alert.module.scss
+++ b/src/components/atoms/Alert/Alert.module.scss
@@ -61,7 +61,7 @@
   border: none;
   cursor: pointer;
   color: currentColor;
-  opacity: var(--opacity-70);
+  opacity: 0.7;
   transition: var(--motion-transition-fast);
   flex-shrink: 0;
 
@@ -158,7 +158,6 @@
     border-color: var(--color-warning);
   }
 }
-
 .variant-error {
   &.style-default {
     background-color: var(--color-red-0);
